Обновление фильтров для поиска перевозчика
Обновлена форма поиска и, соответственно, алгоритмы.

--- a/Transfer.Web/Views/Carrier/SearchResults.cshtml
+++ b/Transfer.Web/Views/Carrier/SearchResults.cshtml
@@ -12,18 +12,18 @@
             <div class="t-col col-12 col-md-4 form-group">
                 <div class="input-group">
                     <span class="input-group-append input-group-icon">
-                        <div class="input-group-text"><i class="fas fa-map-marker-alt fa-lg"></i></div>
+                        <div class="input-group-text"><i class="far fa-building fa-lg"></i></div>
                     </span>
-                    <input asp-for="Inn" class="form-control" placeholder="ИНН компании?" />
+                    <input asp-for="InnName" class="form-control" placeholder="ИНН/Название компании?" />
                 </div>
             </div>
             <div class="row blank-row d-md-none d-flex"></div>
             <div class="t-col col-12 col-md-4 form-group">
                 <div class="input-group">
                     <span class="input-group-append input-group-icon">
-                        <div class="input-group-text"><i class="fas fa-map-marked fa-lg"></i></div>
+                        <div class="input-group-text"><i class="fas fa-phone-alt fa-lg"></i></div>
                     </span>
-                    <input asp-for="Name" class="form-control" placeholder="Как называется компания?" />
+                    <input asp-for="Phone" class="form-control" placeholder="Номер телефона?" />
                 </div>
             </div>
             <div class="row blank-row d-md-none d-flex"></div>
