--- a/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
+++ b/Transfer.Web/Views/Account/CarrierAccountSave.cshtml
@@ -8,14 +8,14 @@
     <script src="~/js/BasicSave.js" crossorigin="anonymous"></script>
 }
 
-    <div class="container">
-        <!--<div class="row blank-row"></div>
-        <div class="row blank-row"></div>-->
-        <div class="row">
-            <div class="t-col col-12 crumbs">
-                ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>
-                &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Carrier" asp-action="Search">Перевозчики</a>
-                &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@Model.OrganisationId">@Model.OrganisationName</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
+<div class="container">
+    <!--<div class="row blank-row"></div>
+    <div class="row blank-row"></div>-->
+    <div class="row">
+        <div class="t-col col-12 crumbs">
+            ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>
+            &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Carrier" asp-action="Search">Перевозчики</a>
+            &nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-action="CarrierItem" asp-controller="Carrier" asp-route-carrierId="@Model.OrganisationId">@Model.OrganisationName</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;
             @if (Model.Id.IsNullOrEmpty())
             {
                 @:Новый пользователь
@@ -159,12 +159,21 @@
                         <i class="fas fa-exclamation-triangle"></i> @ViewBag.ErrorMsg
                     }
                 </div>
-                <div class="t-col col-3 col-md-2 text-end">
-                    <button type="button" class="button-one-red" onclick="ConfirmPopup('@Url.Action("CarrierAccountItemDelete", "Account", new { carrierId = Model.OrganisationId, accountId = Model.Id })', 'Удалить пользователя?')">Удалить</button>
-                </div>
-                <div class="t-col col-3 col-md-2 text-end">
-                    <button type="submit" class="button-one">Сохранить</button>
-                </div>
+                @if (!Model.Id.IsNullOrEmpty())
+                {
+                    <div class="t-col col-3 col-md-2 text-end">
+                        <button type="button" class="button-one-red" onclick="ConfirmPopup('@Url.Action("CarrierAccountItemDelete", "Account", new { carrierId = Model.OrganisationId, accountId = Model.Id })', 'Удалить пользователя?')">Удалить</button>
+                    </div>
+                    <div class="t-col col-3 col-md-2 text-end">
+                        <button type="submit" class="button-one">Сохранить</button>
+                    </div>
+                }
+                else
+                {
+                    <div class="t-col col-3 offset-3 offset-md-2 col-md-2 text-end">
+                        <button type="submit" class="button-one">Сохранить</button>
+                    </div>
+                }
             </div>
             <div class="row blank-row"></div>
         </div>
