Срочное добавление страниц "Контакты" и "О компании""

--- a/Transfer.Web/Views/Info/Normatives.cshtml
+++ b/Transfer.Web/Views/Info/Normatives.cshtml
@@ -8,25 +8,27 @@
 }
 
 
-<div class="container">
-    <!--<div class="row blank-row"></div>
-    <div class="row blank-row"></div>-->
-    <div class="row">
-        <div class="t-col col-12 crumbs">
-                ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-action="Index" asp-controller="Info">Документы</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-action="Normatives" asp-controller="Info">Нормативные акты</a>
-         </div>
-    </div>
-    <!--<div class="row blank-row"></div>-->
-    <div class="row">
-        <div class="t-col col-12 col-md-6 crb-avatar">
-            Здравствуйте, @Security.CurrentAccount.FirstName @Security.CurrentAccount.LastName!
+    <div class="container">
+        <div class="row">
+            <div class="t-col col-12 crumbs">
+                ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;Документы
+            </div>
         </div>
-    </div>
-    <!--<div class="row blank-row"></div>-->
-    <div class="row">
-        <div class="t-col col-12">
-            <h1 style="color: #0f4c71">"Добавление нового перевозчика"</h1>
+        <div class="row">
+            <div class="t-col col-12">
+                <h1 style="color: #0f4c71">Документы</h1>
+            </div>
         </div>
+        <div class="row">
+            <div class="t-col col-12">
+                <a href="/static/4ks6wz" target="_blank">Соглашение об использовании Платформы</a><br />
+                <a href="/static/ibh87t" target="_blank">Оферта о заключении договора фрахтования транспортных средств для перевозки пассажиров и багажа с использованием Платформы</a><br />
+                <a href="/static/5r125k" target="_blank">Партнерское соглашение на осуществление перевозок</a><br />
+                <a href="/static/v8ls7e" target="_blank">Политика конфиденциальности</a><br />
+                <a href="/static/6thrai" target="_blank">Лицензионное соглашение</a><br />
+                <a href="/static/sd9dzh" target="_blank">Договор ВОУ (агентское вознаграждение)</a><br />
+                <a href="/static/62s5ut" target="_blank">Договор ВОУ (абонентская плата)</a>
+            </div>
+        </div>
+        <br /><br /><br /><br />
     </div>
-    <div class="row blank-row"></div>
-</div>
