--- a/Transfer.Web/Views/TripRequest/Save.cshtml
+++ b/Transfer.Web/Views/TripRequest/Save.cshtml
@@ -144,6 +144,8 @@
                             @Html.HiddenFor(x => x.RegionFromId, new { @class = "r1"})
                             @Html.HiddenFor(x => x.RegionFromName, new { @class = "r2"})
                             @Html.HiddenFor(x => x.AddressFrom, new { @class = "r3"})
+                            @Html.HiddenFor(x => x.AddressFromFiasLongitude, new { @class = "r4" })
+                            @Html.HiddenFor(x => x.AddressFromFiasLatitude, new { @class = "r5" })
                         </div>
                     </div>
                 </div>
@@ -171,6 +173,8 @@
                             @Html.HiddenFor(x => x.RegionToId, new { @class = "r1"})
                             @Html.HiddenFor(x => x.RegionToName, new { @class = "r2"})
                             @Html.HiddenFor(x => x.AddressTo, new { @class = "r3"})
+                            @Html.HiddenFor(x => x.AddressToFiasLongitude, new { @class = "r4" })
+                            @Html.HiddenFor(x => x.AddressToFiasLatitude, new { @class = "r5" })
                         </div>
                     </div>
                 </div>
